[project]
name = "fastapi-api"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "DorskFR", email = "dorsk.dev@gmail.com" }]
dependencies = [
    "fastapi>=0.111.1",
    "sqlalchemy>=2.0.31",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.0",
    "ruff>=0.5.5",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_api"]

[tool.rye.scripts]
start = { cmd = "fastapi dev src/fastapi_api/__main__.py" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
