[project]
name = "starlette-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "DorskFR", email = "dorsk.dev@gmail.com" }
]
dependencies = [
    "starlette>=0.38.2",
    "sqlalchemy>=2.0.31",
    "uvicorn>=0.30.3",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.3",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.5",
    "mypy>=1.11.0",
    "pytest>=8.3.2",
    "vulture>=2.11",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/starlette_api"]

[tool.rye.scripts]
start = { cmd = "python -m src.starlette_api" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
